tests/bad/example-e12b.rat
fn Main () -> Void {
  return;
}

fn Main () -> Void {
  Println("bad");
  return;
}
